typewriting class finished

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="" type="application/atom+xml" >
 </head>
 <body>
-    <div class="typing"></div>
+    <p class="line-1 anim-typewriter">Hello world</p>
     <script src="script.js"></script>
 </body>
 </html>
