--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="" type="application/atom+xml" >
 </head>
 <body>
-    <p class="line-1 anim-typewriter">Hello world</p>
+    <div class="sidebar"></div>
+    <div class="topbar"></div>
     <script src="script.js"></script>
 </body>
 </html>
