--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="sidebar"></div>
     <div class="topbar"></div>
+    <div class="searchbar"></div>
     <script src="script.js"></script>
 </body>
 </html>
