--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="sidebar"></div>
     <div class="topbar"></div>
     <div class="searchbar"></div>
+    <div class="explorerbar"></div>
     <script src="script.js"></script>
 </body>
 </html>
