--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fabian_Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="" type="application/atom+xml" >
+    <link rel="preconnect" href="" type="application/atom+xml">
 </head>
 <body>
     <div class="sidebar"></div>
     <div class="topbar"></div>
     <div class="searchbar"></div>
     <div class="explorerbar"></div>
+    <ul class="menu">
+        <li>
+            <a href="#" id="menuButton" title="Menu Options">
+                <img src="images/icons/menu.svg" alt="Menú" style="width: 16px; height: 16px;">
+            </a>
+            <ul class="submenu" id="submenu">
+                <li><a href="#">Opción 1</a></li>
+                <li><a href="#">Opción 2</a></li>
+                <li><a href="#">Opción 3</a></li>
+            </ul>
+        </li>
+    </ul>
     <script src="script.js"></script>
 </body>
 </html>
