--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <div class="sidebar"></div>
     <div class="topbar"></div>
     <div class="searchbar"></div>
-    <div class="explorerbar"></div>
     <ul class="menu">
         <li>
-            <a href="#" id="menuButton" title="Menu Options">
+            <a href="#" id="menuButton" title="Menu">
                 <img src="images/icons/menu.svg" alt="Menú" style="width: 16px; height: 16px;">
             </a>
             <ul class="submenu" id="submenu">
                 <li><a href="#">Opción 1</a></li>
                 <li><a href="#">Opción 2</a></li>
                 <li><a href="#">Opción 3</a></li>
+                <li><a href="#">Opción 4</a></li>
+                <li><a href="#">Opción 5</a></li>
             </ul>
         </li>
     </ul>
