--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@
             </ul>
         </li>
     </ul>
+
+    <button class="open-btn" data-modal="modal1">Abrir Ventana 1</button>
+    <button class="open-btn" data-modal="modal2">Abrir Ventana 2</button>
+
+    <div id="modal1" class="modal">
+        <div class="modal-content">
+            <span class="close" data-modal="modal1">&times;</span>
+            <p class="anim-typewriter line-1">Hola, soy la ventana 1!</p>
+        </div>
+    </div>
+
+    <div id="modal2" class="modal">
+        <div class="modal-content">
+            <span class="close" data-modal="modal2">&times;</span>
+            <p class="anim-typewriter line-1">Bienvenido a la ventana 2!</p>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
